--- a/fangzhan  最初版/2a.css
+++ b/fangzhan  最初版/2a.css
@@ -1,7 +1,79 @@
-.1{
-
+.Home-up{
+    width: 100%;
+    height: 120%;
+    background-color: black;
+    display: flex;
+    position: relative;
+}
+.Home-up-left{
+    width: 40%;
+    height: 40%;
+    background-color: black;
+    position: absolute;
+    top: 20%;
+    left: 0%;
+    z-index: 100;
+}
+.Home-up-right{
+    width: 100%;
+    height: 100%;
+    background-color: black;
+}
+.Home-up-title{
+    position: absolute;
+    z-index: 100; 
+    width: 400px;
+    height: 50px;
+    /* background-color: red; */
+    font-size: 20px;
+    color: white;
+    left: 640px;
+    margin-top: 120px;
+}
+.Home-up-left-title{
+    width: 80%;
+    height: 300px;
+    /* background-color: red; */
+    position: relative;
+    top: 20%;
+    left: 8%;
+}
+#span-up:hover{
+    background-color: white !important;
+    color: black !important;
 }
 
-body{
+.Home-jet{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    /* position: relative; */
+}
+.Home-jet:hover .Home-img-left img{
+    margin-top: 20%;
+    opacity: 1;
+}
+.Home-jet:hover .Home-jet-Earth img{
 
+    opacity: 1;
+}
+
+.Home-img-left{
+    width: 60%;
+    height: 120%;
+    /* background-color: gold; */
+    position: relative;
+}
+.Home-img-left img{
+    width: 90%;
+    height: 52%;
+    margin-top: 24%;
+    opacity: 0.6;
+    transition: all 1s;
+}
+.Home-title-right{
+    width: 40%;
+    height: 100%;
+    background-color: black;
 }
