--- a/仿站/Home.css
+++ b/仿站/Home.css
@@ -7,12 +7,13 @@ html,body {
   width: 100%;
   height: 100%;
   background-color: black;
+  font-family: Arial;
 }
 
 
 .Home-up{
   width: 100%;
-  height: 120%;
+  height: 140%;
   background-color: black;
   display: flex;
   position: relative;
@@ -48,11 +49,14 @@ html,body {
 
 .Home-up-left-title{
   width: 80%;
-  height: 300px;
+  height: 290px;
   position: relative;
-  top: 20%;
+  top: 60%;
   left: 8%;
+  line-height: 150%;
 }
+
+
 
 span-up:hover{
   background-color: white ;
@@ -117,15 +121,15 @@ span-up:hover{
     transition: all 1s;
     cursor: pointer;
     color: white;
-    width: 300px;
+    width: 230px;
     height: 50px;
     background-color: black;
     display: inline-block;
     position: relative;
-    top: 20%;
+    top: 50%;
     left: 8%;
-    border: 5px solid white;
-    font-size: 30px;
+    border: 3px solid white;
+    font-size: 15px;
     text-align: center;
     line-height: 50px;
 }
@@ -136,44 +140,46 @@ span-up:hover{
 }
 
 .span-up-to{
-    transition:all 1s;
-    cursor: pointer; 
+    transition:all 1s;                         
+    cursor: pointer;
     color: white;
-    width: 300px;
-    height: 100px;
+    width: 230px;
+    height: 50px;
     background-color: black;
     display: inline-block;
     position: relative;
-    top: 65%;
-    left: 3%;
-    border: 5px solid white;
-    font-size: 30px;
+    top: 60%;
+    left: 1%;
+    border: 3px solid white;
+    font-size: 15px;
     text-align: center;
-    line-height: 100px;}
+    line-height: 50px;
+}
 
 .span-up-to:hover{
     background: white;
     color:black;
 }
 .Home-up-right video{
-    width: 90%; 
-    height: 90%;
+    width: 100%; 
+    height: 100%;
     object-fit:contain;
     position: absolute; 
-    left: 10%; 
-    top: 25%;
+    left: 15%; 
+    top: 10%;
 
 }
 
 .Home-title-right-item h1{
     color: white;
-    font-size: 50px;
+    font-size: 40px;
     position: relative;
-    top: 20%;
+    top: 30%;
 }
 
 .Home-title-right-item p{
     color: white;
-     position: relative;
-     top: 30%
+    position: relative;
+    top: 40%;
+    line-height: 30px;
 }
